Fix numeric th alignment specificity in tables

--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -108,7 +108,8 @@ tbody {
 }
 
 .numeric,
-th.numeric {
+th.numeric,
+.table > :not(caption) > * > th.numeric {
   text-align: right;
 }
 
